--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <span class="p">});</span>
 </pre></div>
 
-<p>See <a href="http://luis.com">this demo</a> (needs touch support)</p>
+<p>See <a href="demo/index.html">this demo</a> (needs touch support)</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/luis-kaufmann-silva">luis-kaufmann-silva</a></p>
