--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8"> 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pull 2 refresh demo</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="jquery-2.0.3.min.js" type="text/javascript" charset="utf-8"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="author" content="Luis Felipe Kaufmann da Silva">
+    <meta name="keywords" content="pull2refresh, pull to refresh, p2r, jquery pull to refresh">
+    <meta name="description" content="A simple jQuery plugin to perform pull to refresh (p2r)">
+	
+    <title>Pull 2 refresh demo</title>
+	
+    <link rel="stylesheet" href="style.css">
+	
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery.p2r.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="demo.js" type="text/javascript" charset="utf-8"></script>
 	<script>
